--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- CODEX TEST 123 -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MiniSheet</title>
+  </head>
+  <body>test</body>
+</html>
