--- a/frame/index.html
+++ b/frame/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frame</title>
+    <title>Phone Frame</title>
+    <style>
+      :root {
+        --phone-width: 420px;
+        --screen-left: 130px;
+        --screen-top: 36px;
+        --screen-scale: 0.408;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        min-height: 100vh;
+        display: grid;
+        place-items: center;
+        background: #0f1115;
+      }
+
+      .phone-stage {
+        position: relative;
+        width: var(--phone-width);
+      }
+
+      .phone-stage img {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+
+      .phone-stage iframe {
+        position: absolute;
+        top: var(--screen-top);
+        left: var(--screen-left);
+        width: 393px;
+        height: 852px;
+        border: 0;
+        overflow: hidden;
+        border-radius: 42px;
+        transform: scale(var(--screen-scale));
+        transform-origin: top left;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="phone-stage">
+      <img src="iphone14portrait.png" alt="iPhone 14 Pro portrait frame" />
+      <iframe src="../index.html" title="Minisheet app preview"></iframe>
+    </div>
+  </body>
 </html>
