--- a/frame/index.html
+++ b/frame/index.html
@@ -21,7 +21,7 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
-        background: #0f1115;
+        background: #292929;
       }
 
       .phone-stage {
