Reset index.html to stable 5f5caea baseline

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
     <section class="formula-strip" aria-label="Formula editor strip">
       <div class="fx-eq">=</div>
-      <input class="formula-input" value="(B*C)/A+Y" aria-label="Formula editor" />
+      <input class="formula-input" inputmode="none" value="(B*C)/A+Y" aria-label="Formula editor" />
       <div class="toggle">A / <strong>Name</strong></div>
     </section>
 
