--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
       }
 
       .title-block {
+        display: grid;
+        gap: 1px;
         min-width: 0;
+      }
+
+      .title-line {
+        font-size: 16px;
+        line-height: 1.1;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .sheet-line {
@@ -82,9 +92,8 @@
       }
 
       .sheet-name {
-        font-size: 16px;
-        line-height: 1.1;
-        color: var(--text);
+        font-size: 12px;
+        color: #4f5466;
         overflow: hidden;
         text-overflow: ellipsis;
       }
@@ -390,7 +399,8 @@
     <header class="nav">
       <button class="arrow" aria-label="Previous sheet">◀</button>
       <div class="title-block">
-        <div class="sheet-line"><span class="sheet-index">1/2</span><span class="sheet-name">A:B::C:Result</span></div>
+        <div class="title-line" contenteditable="true" role="textbox" aria-label="Sheet title">Proportion: A/B = C/Result | A:B::C:Result</div>
+        <div class="sheet-line"><span class="sheet-index">2</span><span class="sheet-name">A:B::C:Result</span></div>
       </div>
       <button class="arrow" aria-label="Next sheet">▶</button>
     </header>
