--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
         background: var(--panel);
         border-bottom: 1px solid var(--line);
         display: grid;
-        grid-template-columns: 34px minmax(0, 1fr) 34px;
+        grid-template-columns: 34px minmax(0,1fr) 34px;
         gap: 6px;
         align-items: center;
         padding: 6px 8px;
         z-index: 60;
+        isolation: isolate;
       }
 
       .arrow {
@@ -64,10 +65,12 @@
         background: transparent;
         font-size: 18px;
         position: relative;
-        z-index: 1;
+        z-index: 3;
       }
 
       .title-block {
+        position: relative;
+        z-index: 1;
         min-width: 0;
         overflow: hidden;
         pointer-events: none;
